--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>RateMyProfessorAPI</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='RateMyProfessorIcon.ico') }}">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Rate My Professor API</h1>
-    <p>A WIP api that fetches data about Drexel's professors</p>
+    <div class="container-fluid h-100">
+        <div class="row align-items-center h-100">
+            <div class="col d-flex flex-column align-items-center justify-content-center">
+                <img src="{{ url_for('static', filename='RateMyProfessorIcon.png') }}" class="img-fluid" alt="RateMyProfessorIcon">
+                <h1 class="jumbotron-fluid">Rate My Professor API</h1>
+                <p>A WIP api that fetches data about Drexel's professors</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
